--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,13 @@
 /* Global */
 
+/* Google font */
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400&display=swap');
+
 * {
   padding: 0px;
   margin: 0px;
+}
+
+body {
+  font-family: 'Manrope', sans-serif;
 }
