--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,5 +18,26 @@ body {
 }
 
 .card {
-  opacity: 75%;
+  opacity: 65%;
+  padding: 2em;
+  color: black;
+  border-radius: 15px;
+}
+
+input.search-bar {
+  outline: none;
+  border: none;
+  border-bottom: 1px solid black;
+  width: 100%;
+  padding-bottom: 10px;
+  font-size: 1.2em;
+}
+
+.search_button {
+  border: none;
+  margin-top: 0.5em;
+}
+
+button.btn.search_button {
+  padding-left: 0px;
 }
